--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@woocommerce/woocommerce-rest-api": "^1.0.1"
+        "@woocommerce/woocommerce-rest-api": "^1.0.1",
+        "csv-parse": "^4.16.0",
+        "csv-stringify": "^5.6.2",
+        "lodash": "^4.17.21"
     }
 }
